2005-04-04  Atsushi Enomoto  <atsushi@ximian.com>

	* String.cs,
	  Char.cs : use TextInfo for ToLower() and ToUpper().

2005-03-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Exception.cs: Added Assert for TypeInformation to GetObjectData and
	ToString methods (not required for 2.0 as TypeInformation will be 
	deprecated). Added null check for GetObjectData.

Tue Mar 29 11:47:19 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* Delegate.cs: allow IronPython 0.7 to compile.

2005-03-24  Miguel de Icaza  <miguel@novell.com>

	* Delegate.cs: Add CreateDelegate with a target option, currently
	internal as it is not exposed by the framework yet.

2005-03-24  Zoltan Varga  <vargaz@freemail.hu>

	* String.cs: Add some 2.0 methods.

2005-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Activator.cs: Now use the supplied evidences when loading 
	assemblies. Added LinkDemand for RemotingConfiguration on both
	GetObject methods.
	* Console.cs: Added Assert for UnmanagedCode on OpenStandard[Error|
	Input|Output] as they use a handle on a FileStream (which is
	restricted otherwise). Added Demand for UnmanagedCode for the
	Set[Error|In|Out] methods.
	* MarshalByRefObject.cs: Added LinkDemand for Infrastructure on	
	CreateObjRef, GetLifetimeService and InitializeLifetimeService.
	* RuntimeMethodHandle.cs: Added Demand for UnmanagedCode on 
	GetFunctionPointer method.
	* TypedReference.cs: Added LinkDemand for ReflectionPermission's
	MemberAccess on MakeTypedReference.

2005-03-14  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: Fix CAS unit tests for NET_1_1.
	* Exception.cs: Fix CAS unit tests for NET_1_1.

2005-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Version.cs: don't ignore the last number. Fixes bug #73539.

2005-03-11  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoType.cs: When the security manager is active, constructors and
	methods will return null if a linkdemand fails during reflection 
	query.
